2013-09-27 Philipp Klaus Krause <pkk AT spth.de>

	* sdas/astlcs90/t90mch.c:
	  Fix handling of 8-bit immediates, patch by Rainer Keuchel.
	* src/stm8/peeph.def:
	  More flexible unreachable jump elimination.
	* configure.in,
	  device/lib/Makefile.in,
	  device/lib/tlcs90,
	  src/z80/main.c:
	  Library for TLCS-90.

2013-09-27 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c (operandFromSymbol): don't allocate register
	  equivalents for symbols that can't fit in HC08/S08 registers.
	* src/SDCClrange.c (visit): remove TARGET_HC08_LIKE exception.

2013-09-26 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/main.c,
	  src/stm8/peep.c:
	  notUsedFrom() for stm8.
	* src/z80/peeph-r2k.def,
	  src/z80/peeph-z80.def,
	  support/regression/tests/bug-2228.c:
	  Fix bug #2228.
	* sim/ucsim/stm8.src/inst.cc:
	  Fix type name.
	* support/regression/tests/bug-2222.c:
	  Fix use of uninitialized memory.

2013-09-25 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c:
	  Improve handling of global variables in addition (and prepare for subtraction).
	* sim/ucsim/stm8.src/inst.cc:
	  Code cleanup.

2013-09-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/reg51.h: fall back to 8052.h
	* doc/sdccman.lyx: pragma exclude bits
	* src/mcs51/gen.c (genFunction, genEndFunction): applied patch 193 for
	  pragma exclude bits
	* src/port.h: maxextalign warning fixed
	* src/SDCCglobl.h: define true and false for MSVC
	* src/stm8/gen.c (genCmp): fixed warning
	* src/stm8/ralloc2.cc (Ainst_ok): fixed warning

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp:
	  Enable warning for non-connected live-ranges.

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  src/stm8/gen.c,
	  support/regression/tests/bug-2222.c:
	  Fix bugs #2222, 2223.

2013-09-24 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCralloc.hpp,
	  src/SDCClrange.c:
	  Check more carefully for undead hiding among the living variables.
